<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoctorsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_specialization">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doc_specialize"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specialization_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doc_id"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:onClick="insertToDb"
        android:textColor="@color/white_solid"
        android:background="@color/bondi_blue"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert" />

    <Button
        android:onClick="goToSpinnerControl"
        android:textColor="@color/white_solid"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="end"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/specialization" />


</LinearLayout>