<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PatientsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/bondi_blue"
        android:onClick="insertToDb"
        android:text="@string/insert"
        android:textColor="@color/white_solid" />


    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="goToFindPatient"
        android:text=" Find Patient "
        android:textColor="@color/white_solid" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/patient_dob"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/patient_name"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="Patient Id"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>